# fastops

./: .gitignore  AGENTS.md  DEPLOYMENT_VERIFICATION.md  README.md  TASK_COMPLETION_REPORT.md  VERIFICATION_SUMMARY.md  apps.html  apps.html.md  caddy.html  caddy.html.md  cloudflare.html  cloudflare.html.md  compose.html  compose.html.md  core.html  core.html.md  index.html  index.html.md  multipass.html  multipass.html.md  proxy.conf  pyproject.toml  robots.txt  search.json  sitemap.xml  test_deployment.py  vps.html  vps.html.md
dockr/: _modidx.py  compose.py  core.py  multipass.py  vps.py
examples/: README.md
examples/microservices/: README.md  deploy.py
examples/python_webapp/: README.md  deploy.py
examples/static_site/: README.md  deploy.py
fastops/: __init__.py  _modidx.py  apps.py  aws.py  azure.py  caddy.py  ci.py  cloudflare.py  compliance.py  compose.py  connect.py  core.py  detect.py  docker.py  gcp.py  infra.py  multipass.py  proxy.py  resources.py  secrets.py  ship.py  teardown.py  vps.py
nbs/: 00_core.ipynb  01_cloudflare.ipynb  01_compose.ipynb  02_caddy.ipynb  02_proxy.ipynb  03_multipass.ipynb  03_vps.ipynb  04_cloudflare.ipynb  04_ship.ipynb  05_apps.ipynb  06_vps.ipynb  index.ipynb  nbdev.yml  sidebar.yml
