[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dockr"
version = "0.0.1"
description = "a simple wrapper around docker engines"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "71293", email = "karthikrajgopal.laxminaarayanan@bain.com"}]
keywords = ['nbdev', 'docker']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastcore>=1.12.14",
    "pyyaml>=6.0",
    "notebook",
    "cloudflare>=4.3.1",
    "fastcloudinit>=0.0.5",
]

[project.urls]
Repository = "https://github.com/Karthik777/dockr"
Documentation = "https://Karthik777.github.io/dockr/"

[project.entry-points.nbdev]
dockr = "dockr._modidx:d"

[dependency-groups]
dev = [
    "nbdev>=2.3.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dockr"]

[tool.nbdev]
