[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastops"
version = "0.0.1"
description = "End-to-end developer operations toolkit: Docker, VPS, DNS, Caddy, and CI/CD from Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "71293", email = "karthik.rajgopal@hotmail.com"}]
keywords = ['nbdev', 'docker', 'devops', 'vps', 'caddy', 'cloudflare']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastcore>=1.12.14",
    "pyyaml>=6.0",
    "notebook",
    "cloudflare>=4.3.1",
    "fastcloudinit>=0.0.5",
]

[project.urls]
Repository = "https://github.com/Karthik777/fastops"
Documentation = "https://Karthik777.github.io/fastops/"

[project.entry-points.nbdev]
fastops = "fastops._modidx:d"

[dependency-groups]
dev = [
    "nbdev>=2.3.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fastops"]

[tool.nbdev]
