[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastops"
version = "0.0.2"
description = "End-to-end developer operations toolkit: Docker, VPS, DNS, Caddy, and CI/CD from Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "71293", email = "karthik.rajgopal@hotmail.com"}]
keywords = ['nbdev', 'docker', 'devops', 'vps', 'caddy', 'cloudflare', 'deployment', 'infrastructure', 'cloud', 'resources']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastcore>=1.12.14",
    "pyyaml>=6.0",
    "notebook",
    "cloudflare>=4.3.1",
    "fastcloudinit>=0.0.5",
]

[project.urls]
Repository = "https://github.com/Karthik777/fastops"
Documentation = "https://Karthik777.github.io/fastops/"

[project.optional-dependencies]
db = ["fastsql>=0.0.13"]
storage = ["fsspec>=2024.2", "s3fs", "adlfs"]
llm = ["lisette"]
cache = ["redis>=5.0"]
queue = ["pika>=1.3"]
search = ["elasticsearch>=8.0"]
azure = ["azure-identity", "azure-mgmt-resource"]
aws = ["boto3"]
infra = ["pyinfra>=3.0"]
all = [
    "fastsql>=0.0.13",
    "fsspec>=2024.2",
    "s3fs",
    "adlfs",
    "lisette",
    "redis>=5.0",
    "pika>=1.3",
    "elasticsearch>=8.0",
    "azure-identity",
    "azure-mgmt-resource",
    "boto3",
    "pyinfra>=3.0",
]

[project.entry-points.nbdev]
fastops = "fastops._modidx:d"

[dependency-groups]
dev = [
    "nbdev>=2.3.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fastops"]

[tool.nbdev]
